# ffi-bridge

./: .gitignore  LICENSE  Makefile  README.md  ffi-bridge.md
.github/workflows/: ci.yml  publish.yml
go/: bridge.go  bridge_test.go  callback.go  errors.go  go.mod  memory.go  types.go
go/examples/basic/: main.go
rust/: Cargo.toml
rust/benches/: ffi_bench.rs
rust/examples/: basic.rs
rust/src/: bridge.rs  callback.rs  errors.rs  lib.rs  memory.rs  types.rs
rust/tests/: integration.rs
shared/: error_codes.h  ffi.h
