[package]
name = "ffi-bridge"
version = "1.0.0"
edition = "2021"
description = "Memory-safe Go↔Rust FFI boundary helpers: buffer management, error propagation, and callback registration"
license = "MIT"
repository = "https://github.com/ChainPrimitives/ffi-bridge"
homepage = "https://github.com/ChainPrimitives/ffi-bridge"
documentation = "https://docs.rs/ffi-bridge"
readme = "README.md"
keywords = ["ffi", "go", "rust", "bridge", "memory-safe"]
categories = ["api-bindings", "memory-management"]
authors = ["Subaskar Sivakumar <subaskar.sr@gmail.com>"]
rust-version = "1.70"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
